# dri-tracker-rs

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.sh  index.html  input.css  tailwind.config.js
docs/: dri-tracker-rs-2c3fbb8b9104bb1c.js  dri-tracker-rs-2c3fbb8b9104bb1c_bg.wasm  dri-tracker-rs-48b29ca16416239f.js  dri-tracker-rs-48b29ca16416239f_bg.wasm  index.html  output-8acd33fde9fbfd22.css
src/: DRIComponents.rs  app.rs  dri_components.rs  logo.rs  main.rs
style/: output.css
