[package]
name = "dri-tracker-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
base64 = "0.21"
percent-encoding = "2.1"
rand = "0.8"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Location", "History" ] }
leptos = { version = "0.5.1", features = ["csr"] }
leptos_router = { version = "0.5.1", features = ["csr"] }
leptos_meta = { version = "0.5.1", features = ["csr"] }
chrono = "0.4"

[dependencies.getrandom]
version = "0.2.10"
features = ["js"]

